compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__custom_types__duplicate_variable_error_does_not_stop_analysis.snap
---
source: compiler-core/src/type_/tests/custom_types.rs
assertion_line: 50
expression: "\nrecord Two<a, a> {\n  Two(a, a)\n}\n\nrecord Three<a, a> {\n  Three\n}\n"
---
----- SOURCE CODE

record Two<a, a> {
  Two(a, a)
}

record Three<a, a> {
  Three
}


----- ERROR
error: Duplicate type parameter
  ┌─ /src/one/two.rakun:2:15
  │
2 │ record Two<a, a> {
  │               ^

This definition has multiple type parameters named `a`.
Rename or remove one of them.

error: Duplicate type parameter
  ┌─ /src/one/two.rakun:6:17
  │
6 │ record Three<a, a> {
  │                 ^

This definition has multiple type parameters named `a`.
Rename or remove one of them.
